After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742035 - 1.2.5 unit test failures
1.2.5 unit test failures
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: General
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: tracker-general
Depends on:
Blocks:
 
 
Reported: 2014-12-27 21:31 UTC by darkxst
Modified: 2014-12-29 13:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libtracker-extract: fix crash when running unit tests (1005 bytes, patch)
2014-12-28 22:17 UTC, darkxst
committed Details | Review
libtracker-extract: fix logic in guarantee title from file (914 bytes, patch)
2014-12-28 23:33 UTC, darkxst
committed Details | Review

Description darkxst 2014-12-27 21:31:48 UTC
1.2.5 is failing to pass unit tests under Ubuntu autopackage test environment. I am also getting failures in jhbuild but they are different to these.

ERROR: tracker-extract-info-test
================================


(/tmp/adt-run.HW6Y1M/build.muR/tracker-1.2.5/tests/libtracker-extract/.libs/lt-tracker-extract-info-test:17825): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
# random seed: R02S785877f42fa902cfd2de41d9ecc752e4
# Start of libtracker-extract tests
# Start of extract-info tests
Trace/breakpoint trap (core dumped)
# GLib-GObject-FATAL-CRITICAL: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
ERROR: tracker-extract-info-test - missing test plan
ERROR: tracker-extract-info-test - exited with status 133 (terminated by signal 5?)

ERROR: tracker-guarantee-test
=============================

**
Tracker:ERROR:tracker-guarantee-test.c:66:test_title: 'title_retrieved' should be TRUE
# random seed: R02S8772129d258146cd1dda6e89aa1d5521
# Start of libtracker-extract tests
# Start of guarantee tests
# Start of title tests
ok 1 /libtracker-extract/guarantee/title/normal-extraction
PASS: tracker-guarantee-test 1 /libtracker-extract/guarantee/title/normal-extraction
Aborted (core dumped)
# Tracker:ERROR:tracker-guarantee-test.c:66:test_title: 'title_retrieved' should be TRUE
ERROR: tracker-guarantee-test - missing test plan
ERROR: tracker-guarantee-test - exited with status 134 (terminated by signal 6?)
Comment 1 darkxst 2014-12-27 22:14:43 UTC
this is the test failure I get in jhbuild 1.2.5 branch

ERROR: tracker-test
===================

**
Tracker:ERROR:tracker-test.c:62:insert_test_data: assertion failed (error == NULL): GDBus.Error:org.freedesktop.Tracker1.SparqlError.Internal: database is locked (strerror of errno (not necessarily related): Resource temporarily unavailable) (tracker_sparql_error-quark, 6)
# random seed: R02S5edd839a8669a4b6834bc5b9986856e5
Aborted (core dumped)
# Tracker:ERROR:tracker-test.c:62:insert_test_data: assertion failed (error == NULL): GDBus.Error:org.freedesktop.Tracker1.SparqlError.Internal: database is locked (strerror of errno (not necessarily related): Resource temporarily unavailable) (tracker_sparql_error-quark, 6)
ERROR: tracker-test - missing test plan
ERROR: tracker-test - exited with status 134 (terminated by signal 6?)
Comment 2 darkxst 2014-12-28 21:36:25 UTC
tracker-extract-info-test failure is caused by commit adb73fc
Comment 3 darkxst 2014-12-28 22:17:02 UTC
Created attachment 293415 [details] [review]
libtracker-extract: fix crash when running unit tests

media_art_process is not set when running tracker-extract-info tests
Comment 4 darkxst 2014-12-28 23:33:05 UTC
Created attachment 293418 [details] [review]
libtracker-extract: fix logic in guarantee title from file
Comment 5 Martyn Russell 2014-12-29 09:59:15 UTC
Comment on attachment 293418 [details] [review]
libtracker-extract: fix logic in guarantee title from file

Oh shit, good catch. How did I miss that before :)

Thanks Tim, please go ahead and commit.
Comment 6 Martyn Russell 2014-12-29 09:59:51 UTC
Comment on attachment 293415 [details] [review]
libtracker-extract: fix crash when running unit tests

Hi, yea this looks like the right thing to do, we don't know if it exists even if we have support for it!

Please commit :)
Comment 7 darkxst 2014-12-29 13:11:06 UTC
Attachment 293415 [details] pushed as ad71e5e - libtracker-extract: fix crash when running unit tests
Attachment 293418 [details] pushed as be82e04 - libtracker-extract: fix logic in guarantee title from file