libtracker-extract: fix crash when running unit tests

media_art_process is not set when running tracker-extract-info tests

https://bugzilla.gnome.org/show_bug.cgi?id=742035