src/libtracker-extract/tracker-extract-info.c
@@ -144,7 +144,8 @@ tracker_extract_info_unref (TrackerExtractInfo *info)
 		g_free (info->where_clause);
 
 #ifdef HAVE_LIBMEDIAART
-		g_object_unref (info->media_art_process);
+		if (info->media_art_process)
+			g_object_unref (info->media_art_process);
 #endif
 
 		g_slice_free (TrackerExtractInfo, info);
